# ecris.analysis

./: .gitignore  README.md  csd_analysis.ipynb  pyproject.toml  venus_data_analysis.ipynb
data/: IsotopeData.txt  alpha_values.csv
ecris/analysis/: m_over_q.py  peaks.py
ecris/analysis/io/: read_csd_file.py
ecris/analysis/plot/: __init__.py  plotting.py
models/oxygen_nn/: mlp_csd_oxygen_params.json  x_training.npy  y_training.npy
notebooks/: Untitled.ipynb  csd_analysis.ipynb  emittance_analysis.ipynb  ml_presentation.ipynb  oxygen_ml.ipynb  test.ipynb
ops/ecris/analysis/: __init__.py  exceptions.py  m_over_q.py  peaks.py  venus_data.py
ops/ecris/analysis/csd/: __init__.py  m_over_q.py  polynomial_fit.py
ops/ecris/analysis/csd/ml/: __init__.py  helpers.py  oxygen_model.py  train_oxygen_model.py
ops/ecris/analysis/emittance_scan/: rms_emittance.py
ops/ecris/analysis/io/: __init__.py  convert_venus_data.py  datasheet_values.py  read_csd_file.py  read_emittance_scan_file.py
ops/ecris/analysis/model/: csd.py  element.py  emittance_scan.py
ops/ecris/analysis/plot/: element_markers.py  plotting.py
tests/: test_venus_data.py
